vm-with-load-balancer-and-iap-auth/modules/prefect-vm/network.tf
resource "google_compute_network" "vpc" {
  name                    = "${var.instance_name}-vpc"
  auto_create_subnetworks = false
}

resource "google_compute_subnetwork" "subnet" {
  name          = "${var.instance_name}-subnet"
  ip_cidr_range = var.subnet_cidr
  region        = var.gcp_region
  network       = google_compute_network.vpc.id

}

resource "google_compute_address" "static_ip_address" {
  name   = "${var.instance_name}-static-ip-address"
  region = var.gcp_region
}

data "google_compute_global_address" "prefect_lb_ip" {
  count = var.enable_load_balancer ? 1 : 0
  name  = var.reserved_prefect_lb_ip_name
}
